--- a/shippable.yml
+++ b/shippable.yml
@@ -20,7 +20,7 @@ env:
 
 before_install:
   - which heroku || wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
-  - which rvm && rvm use ruby-2.0.0-p598 --default && ruby --version || /usr/local/rvm/bin/rvm useruby-2.0.0-p598 --default
+  - ./install.sh
 
 install:
   - pip install -r requirements.txt
