--- a/shippable.yml
+++ b/shippable.yml
@@ -21,8 +21,8 @@ env:
 
 before_install:
   - which heroku || wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
-  - sudo find / -name rvm -print
-  - . $HOME/.rvm/scripts/rvm && rvm use ruby-2.0.0-p598 --default && ruby --version || . /usr/local/rvm/bin/rvm && rvm use ruby-2.0.0-p598 --default && ruby --version
+  - echo $HOME
+  - ./install.sh 
 
 install:
   - pip install -r requirements.txt
